k8s/production/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prod-NOM PRENOM-MonApplication-frontend-deployment
  namespace: prod-NOM PRENOM-MonApplication-frontend
  labels:
    app: prod-NOM PRENOM-MonApplication-frontend
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: prod-NOM PRENOM-MonApplication-frontend
  template:
    metadata:
      labels:
        app: prod-NOM PRENOM-MonApplication-frontend
    spec:
      containers:
        - name: prod-NOM PRENOM-MonApplication-frontend
          image: corentin35/NOM PRENOM-MonApplication-frontend:${TAG_VERSION}
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 3
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            requests:
              cpu: '1'
              memory: '1Gi'
            limits:
              cpu: '2'
              memory: '2Gi'
      imagePullSecrets:
        - name: regcred
