k8s/production/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prod-NOM PRENOM-MonApplication-frontend-service
  namespace: prod-NOM PRENOM-MonApplication-frontend
spec:
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: prod-NOM PRENOM-MonApplication-frontend
